--- a/pixellight.vcxproj
+++ b/pixellight.vcxproj
@@ -10,6 +10,20 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Geom.cpp" />
+    <ClCompile Include="src\GeomInstance.cpp" />
+    <ClCompile Include="src\LevelEdge.cpp" />
+    <ClCompile Include="src\LevelNode.cpp" />
+    <ClCompile Include="src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Geom.h" />
+    <ClInclude Include="src\GeomInstance.h" />
+    <ClInclude Include="src\LevelEdge.h" />
+    <ClInclude Include="src\LevelNode.h" />
+    <ClInclude Include="src\Vec2.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{435FB563-2946-400F-B0B8-4126DD873D45}</ProjectGuid>
     <RootNamespace>pixellight</RootNamespace>
@@ -79,15 +93,6 @@
       <AdditionalDependencies>user32.lib;opengl32.lib;glfw.lib;fmodex_vc.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Geom.cpp" />
-    <ClCompile Include="GeomInstance.cpp" />
-    <ClCompile Include="src\main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Geom.h" />
-    <ClInclude Include="GeomInstance.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
