--- a/pixellight.vcxproj
+++ b/pixellight.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\f3x5.cpp" />
     <ClCompile Include="src\Geom.cpp" />
     <ClCompile Include="src\GeomInstance.cpp" />
     <ClCompile Include="src\LevelEdge.cpp" />
@@ -21,6 +22,7 @@
     <ClCompile Include="src\tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\f3x5.h" />
     <ClInclude Include="src\Geom.h" />
     <ClInclude Include="src\GeomInstance.h" />
     <ClInclude Include="src\LevelEdge.h" />
@@ -76,6 +78,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>include\</AdditionalIncludeDirectories>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -90,6 +93,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>include\</AdditionalIncludeDirectories>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
